--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ $font: "Roboto", sans-serif;
     width: 85px;
     height: 85px;
     margin-left: -43px;
-    margin-top: -120px;
+    margin-top: -20px;
     border: 10px solid rgb(0, 0, 0);
     border-radius: 55px;
     background: rgb(255, 0, 0);
@@ -56,16 +56,14 @@ $font: "Roboto", sans-serif;
   .board {
     border: 20px solid #000;
     border-radius: 450px;
-
     height: 550px;
     width: 550px;
     display: flex;
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-top: -375px;
+    margin-top: -275px;
     margin-left: -295px;
-    overflow: hidden;
     .logo-button {
       text-align: center;
       border-radius: 150px;
@@ -93,22 +91,26 @@ $font: "Roboto", sans-serif;
     .row1 {
       margin-left: -45px;
     }
-    .green {
-      @include panels-styling;
-      background: green;
+    .row1 {
+      .green {
+        @include panels-styling;
+        background: green;
+      }
+      .red {
+        @include panels-styling;
+        background: red;
+      }
     }
-    .red {
-      @include panels-styling;
-      background: red;
-    }
-    .blue {
-      @include panels-styling;
-      background: blue;
-    }
-    .yellow {
-      @include panels-styling;
-      background: yellow;
+    .row2 {
+      .blue {
+        @include panels-styling;
+        background: blue;
+      }
+      .yellow {
+        @include panels-styling;
+        background: yellow;
+      }
     }
   }
-  @import 'mobile.scss';
+  @import "mobile.scss";
 }
