--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,8 +1,4 @@
 @media only screen and (max-width: 600px) {
-  * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
   * .score {
     margin: 25px 0 25px 0;
   }
@@ -41,28 +37,32 @@
     top: 0;
     width: 100%;
     height: 100%;
-    border-radius: 350px;
+    border-radius: 0px;
     background: #fff;
-    overflow: hidden;
+    overflow: visible;
   }
   * .board .logo-button {
     display: none;
   }
   * .board .row1 {
     margin: 0;
+    height: 25px;
     width: 50%;
   }
   * .board .row1 .green,
   * .board .row1 .red {
+    height: 30vh;
     border: none;
     width: 100%;
   }
   * .board .row2 {
     margin: 0;
+    height: 25px;
     width: 50%;
   }
   * .board .row2 .blue,
   * .board .row2 .yellow {
+    height: 30vh;
     border: none;
     width: 100%;
   }
