--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 600px) {
   * {
-    box-sizing: border-box;
     .score {
       margin: 25px 0 25px 0;
     }
@@ -32,26 +31,30 @@
       top: 0;
       width: 100%;
       height: 100%;
-      border-radius: 350px;
+      border-radius: 0px;
       background: #fff;
-      overflow: hidden;
+      overflow: visible;
       .logo-button {
         display: none;
       }
       .row1 {
         margin: 0;
+        height: 25px;
         width: 50%;
         .green,
         .red {
+          height: 30vh;
           border: none;
           width: 100%;
         }
       }
       .row2 {
         margin: 0;
+        height: 25px;
         width: 50%;
         .blue,
         .yellow {
+          height: 30vh;
           border: none;
           width: 100%;
         }
